plugins/groovy/testdata/highlighting/pre30/tryResources.groovy
try <error descr="'try' with resources is not supported in current version">(</error>
  def a = 1
) {}
